--- a/app/blocks/header/header.html
+++ b/app/blocks/header/header.html
@@ -1,3 +1,26 @@
 <header class="header">
-    
+    <div class="container">
+        <div class="header__container">
+            <a class="logo" href="/">ArtPulse</a>
+            <nav class="nav">
+                <ul class="list">
+                    <li class="list-item">
+                        <a class="list-link" href="#about">
+                            about
+                        </a>
+                    </li>
+                    <li class="list-item">
+                        <a class="list-link" href="#advantages">
+                            advantages
+                        </a>
+                    </li>
+                    <li class="list-item">
+                        <a class="list-link" href="#contact">
+                            contact
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </header>
