--- a/app/blocks/footer/footer.html
+++ b/app/blocks/footer/footer.html
@@ -1,3 +1,74 @@
 <footer class="footer">
-
+    <div class="footer__container">
+        <div class="footer__top">
+            <nav class="nav">
+                <ul class="list">
+                    <li class="list-item">
+                        <a class="list-link" href="#about">
+                            about
+                        </a>
+                    </li>
+                    <li class="list-item">
+                        <a class="list-link" href="#advantages">
+                            advantages
+                        </a>
+                    </li>
+                    <li class="list-item">
+                        <a class="list-link" href="#contact">
+                           contact
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="container">
+            <div class="footer__center">
+                <a class="logo" href="/">ArtPulse</a>
+                <ul class="footer__social">
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="https://www.instagram.com/" target="_blank">
+                            <img src="/images/icons/social/instagram.svg" alt="Instagram">
+                        </a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="https://www.tiktok.com/" target="_blank">
+                            <img src="/images/icons/social/tiktok.svg" alt="TikTok">
+                        </a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="https://www.linkedin.com/" target="_blank">
+                            <img src="/images/icons/social/linkedin.svg" alt="LinkedIn">
+                        </a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="https://www.facebook.com/" target="_blank">
+                            <img src="/images/icons/social/facebook.svg" alt="Facebook">
+                        </a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="https://web.telegram.org/" target="_blank">
+                            <img src="/images/icons/social/telegram.svg" alt="Telegram">
+                        </a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a class="footer__social-link" href="https://www.youtube.com/" target="_blank">
+                            <img src="/images/icons/social/youtube.svg" alt="YouTube">
+                        </a>
+                    </li>
+                </ul>
+                <div class="footer__btn btn">order</div>
+            </div>
+            <div class="footer__bottom">
+                <p class="footer__copyright">
+                    © <span>2024</span>, Copyright
+                </p>
+                <a class="footer__link" href="https://en.wikipedia.org/wiki/Privacy_policy" target="_blank">
+                    Privacy Policy
+                </a>
+                <a class="footer__link" href="https://en.wikipedia.org/wiki/Terms_of_service" target="_blank">
+                    Terms Of Use
+                </a>
+            </div>
+        </div>
+    </div>
 </footer>
