Edited images urls

--- a/app/blocks/contact/contact.html
+++ b/app/blocks/contact/contact.html
@@ -22,7 +22,7 @@
                     </form>
                 </div>
                 <div class="contact__info-right">
-                    <img src="/images/screen-img.png" alt="Contact form background">
+                    <img src="images/screen-img.png" alt="Contact form background">
                 </div>
             </div>
         </div>
