--- a/app/blocks/head/head.html
+++ b/app/blocks/head/head.html
@@ -2,6 +2,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>MST-test1</title>
-  <link type="image/png" sizes="16x16" rel="icon" href="/images/icons/favicon.png">
+  <link type="image/png" sizes="16x16" rel="icon" href="images/icons/favicon.png">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
