--- a/app/blocks/screen/screen.html
+++ b/app/blocks/screen/screen.html
@@ -10,19 +10,19 @@
                 </p>
                 <ul class="screen__list">
                     <li class="screen__item">
-                        <img src="/images/icons/check.svg" alt="Icons">
+                        <img src="images/icons/check.svg" alt="Icons">
                         <span class="screen__item-text">
                             <span>55,000$</span> salary of graphic designers
                         </span>
                     </li>
                     <li class="screen__item">
-                        <img src="/images/icons/check.svg" alt="Icons">
+                        <img src="images/icons/check.svg" alt="Icons">
                         <span class="screen__item-text">
                             <span>200K+</span> number of fonts
                         </span>
                     </li>
                     <li class="screen__item">
-                        <img src="/images/icons/check.svg" alt="Icons">
+                        <img src="images/icons/check.svg" alt="Icons">
                         <span class="screen__item-text">
                             <span>100M+</span> design-related posts on social media
                         </span>
