--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -28,7 +28,7 @@
     </div>
     <!-- /.wrapper -->
 
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
 </body>
 
 </html>
